--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>FountainJS</title>
+    <title>RssPerso</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <link rel="icon" type="image/png" href="http://fountainjs.io/assets/imgs/fountain.png" />
+    <link rel="icon" type="image/png" href="https://avatars.netvibes.com/favicon/https://www.netvibes.com/modules/rssReader/rssReader.html?v=334" />
   </head>
   <body>
     <!--[if lt IE 10]>
